<resources>

    <string name="app_name">testapp</string>
    <string name="photo_text">Abhay Agrawal</string>
    <string name="power_company">Powered By -- Abhay Agrawal</string>
    <string name="heading_intro">Welcome This Is Test Taking App</string>
    <string name="take_test_label">Test Yourself By Attempting The Test</string>
    <string name="build_name">Build By -- Abhay Agrawal</string>
    <string name="take_test">Take Test</string>
    <string name="title_activity_take_test">TakeTest</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="submit">SUBMIT AND NEXT</string>
    <string name="cancel_test">CLICK HERE TO CANCEL TEST</string>


</resources>